[project]
name = "hydra-orm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Taos Transue", email = "" }
]
requires-python = ">=3.9"
dependencies = [
    "hydra-core>=1.3.2",
    "pytest>=8.3.3",
    "sqlalchemy>=2.0.36",
]

[project.scripts]
hydra-orm = "hydra_orm:main"

[tool.uv]
index-strategy = "unsafe-best-match"
link-mode = "symlink"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
